--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="row" style="margin-top: 5px">
-        <div class="col-md-12">
+        <div class="col-md-12" style="height:calc(100vh - 310px); overflow-y: scroll;">
           <table style="width: 100%">
 
             <tr *ngFor="let l of newEmployee.list; let i = $index">
