--- a/src/app/views/directory/directory.component.html
+++ b/src/app/views/directory/directory.component.html
@@ -68,7 +68,7 @@
       >
       </app-table-tree>
     </div>
-      <div class="col" style="overflow-x:scroll;">
+      <div class="col" style="overflow-x:scroll; max-height: calc(100vh - 200px);">
         <app-employees
           [disableClass]="false"
           [checkEditionStatus]="false"
