--- a/src/app/views/management/warehouse/warehouse.component.scss
+++ b/src/app/views/management/warehouse/warehouse.component.scss
@@ -1,8 +1,10 @@
 /deep/ app-warehouse{
+.inv_lang{
+  position: absolute;
+  right: 80px;
+}
 
-  app-loading-overlay {
-
-  }
+ 
   ag-grid-angular {
     .ag-header {
       overflow: visible !important;
