--- a/src/app/components/document-turn-over-disabled-dialog/document-turn-over-disabled-dialog.component.html
+++ b/src/app/components/document-turn-over-disabled-dialog/document-turn-over-disabled-dialog.component.html
@@ -3,7 +3,7 @@
     <div class="ui-g ui-fluid">
       <div class="ui-g-12 ui-md-12">
         <p>დეპარტამენტის უფროსი ან მოადგილე</p>
-        <p-autoComplete  field="fullname" [size]="30" placeholder="" [minLength]="1" [dropdown]="true" [suggestions]="users" (completeMethod)="filterUsers($event)"  (onSelect)="selectUser($event)" ></p-autoComplete>
+        <p-autoComplete disabled  field="fullname" [size]="30" placeholder="" [minLength]="1" [dropdown]="true" [suggestions]="users" (completeMethod)="filterUsers($event)"  (onSelect)="selectUser($event)"  [(ngModel)]="selectedUser"></p-autoComplete>
       </div>
 
       <div class="ui-g-12 ui-md-12">
@@ -27,8 +27,8 @@
                 <td>{{item['name']}}</td>
                 <td>{{item['maker']}}</td>
                 <td>{{item['model']}}</td>
-                <td><input type="text" [(ngModel)]="item['counter']" style="width: 100%"/></td>
-                <td><input type="text" [(ngModel)]="item['note']" style="width: 100%"/></td>
+                <td><input type="text" [(ngModel)]="item['counter']" style="width: 100%" disabled /></td>
+                <td><input type="text" [(ngModel)]="item['note']" style="width: 100%" disabled/></td>
                 <td > <i class="pi pi-times"  style="float:right" (click)="deleteItem(index)"></i></td>
               </tr>
             </ng-template>
@@ -37,7 +37,7 @@
       </div>
       <div class="ui-g-12 ui-md-12">
         <p>შეტყობინება:</p>
-        <textarea [rows]="5" [cols]="30" pInputTextarea [(ngModel)]="message.note" ></textarea>
+        <textarea [rows]="5" [cols]="30" pInputTextarea [(ngModel)]="message.note" disabled ></textarea>
       </div>
     </div>
   </div>
@@ -45,6 +45,7 @@
     <div class="actionButton">
       <div class="buttonBox">
         <button pButton type="button" icon="pi pi-file" label="დოკუმენტები ({{ uploadFiles.length}})" (click)="filesDialog=true"> </button>
+        <button pButton type="button" icon="pi pi-inbox" label="მიმაგრებული წერილები ({{ chains.length}})" > </button>
       </div>
       <div class="buttonBox">
         <button type="button" pButton icon="pi pi-close" label="გაგზავნა" class="ui-button-secondary" (click)="send()"></button>
